[gd_scene load_steps=9 format=3 uid="uid://f83nmxc6vmap"]

[ext_resource type="Script" path="res://src/misc/hud_controller.gd" id="1_4bxdn"]
[ext_resource type="FontFile" uid="uid://byttc0mskf7ck" path="res://assets/fonts/DungeonFont.ttf" id="2_m5vqr"]
[ext_resource type="FontFile" uid="uid://iwfkhkd0cbfa" path="res://assets/fonts/m3x6.ttf" id="3_s2c4q"]

[sub_resource type="Shader" id="Shader_a587i"]
code = "shader_type canvas_item;
uniform sampler2D iChannel1;
uniform sampler2D iChannel0: hint_screen_texture, filter_linear_mipmap;


float rand(float n){return fract(sin(n) * 43758.5453123);}

float noise(float p){
	float fl = floor(p);
    float fc = fract(p);
	return mix(rand(fl), rand(fl + 1.0), fc);
}

float blockyNoise(vec2 uv, float threshold, float scale, float seed)
{
	float scroll = floor(sin(11.0 *  TIME) + sin(TIME) ) * 0.77;
    vec2 noiseUV = uv.yy / scale + scroll;
    float noise2 = texture(iChannel1, noiseUV).r;
    
    float id = floor( noise2 * 20.0);
    id = noise(id + seed) - 0.5;
    
  
    if ( abs(id) > threshold )
        id = 0.0;

	return id;
}


void fragment() {

    
    float rgbIntesnsity = 0.1 + 0.1 * sin(TIME* 3.7);
    float displaceIntesnsity = 0.2 +  0.3 * pow( sin(TIME * 1.2), 5.0);
    float interlaceIntesnsity = 0.01;
    float dropoutIntensity = 0.1;

    
    vec2 uv = FRAGCOORD.xy/(1.0/SCREEN_PIXEL_SIZE).xy;

	float displace = blockyNoise(uv + vec2(uv.y, 0.0), displaceIntesnsity, 25.0, 66.6);
    displace *= blockyNoise(uv.yx + vec2(0.0, uv.x), displaceIntesnsity, 111.0, 13.7);
    
    uv.x += displace ;
    
    vec2 offs = 0.1 * vec2(blockyNoise(uv.xy + vec2(uv.y, 0.0), rgbIntesnsity, 65.0, 341.0), 0.0);
    
    float colr = texture(iChannel0, uv-offs).r;
	float colg = texture(iChannel0, uv).g;
    float colb = texture(iChannel0, uv +offs).b;

    
    float line = fract(FRAGCOORD.xy.y / 3.0);
	vec3 mask = vec3(3.0, 0.0, 0.0);
		if (line > 0.333)
			mask = vec3(0.0, 3.0, 0.0);
		if (line > 0.666)
			mask = vec3(0.0, 0.0, 3.0);
    
    
	float maskNoise = blockyNoise(uv, interlaceIntesnsity, 90.0, TIME) * max(displace, offs.x);
    
    maskNoise = 1.0 - maskNoise;
    if ( maskNoise == 1.0)
        mask = vec3(1.0);
    
    float dropout = blockyNoise(uv, dropoutIntensity, 11.0, TIME) * blockyNoise(uv.yx, dropoutIntensity, 90.0, TIME);
    mask *= (1.0 - 5.0 * dropout);
	
    
    COLOR = vec4(mask * vec3(colr, colg, colb), 1.0);
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8ursv"]
frequency = 0.076

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1iu2n"]
noise = SubResource("FastNoiseLite_8ursv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_asfis"]
shader = SubResource("Shader_a587i")
shader_parameter/iChannel1 = SubResource("NoiseTexture2D_1iu2n")

[sub_resource type="Theme" id="Theme_sfj8c"]
default_font = ExtResource("2_m5vqr")
default_font_size = 51

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_4bxdn")

[node name="LowHealthEffect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_asfis")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverScreen" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -28.0
offset_right = 134.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_sfj8c")
text = "GAME OVER"

[node name="Health" type="Label" parent="."]
offset_left = 9.0
offset_top = -2.0
offset_right = 38.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_s2c4q")
theme_override_font_sizes/font_size = 32
text = "255"

[node name="PickupText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_s2c4q")
theme_override_font_sizes/font_size = 32
text = "YOU GOT SPEAR
PRESS X TO ATTACK"
horizontal_alignment = 1
vertical_alignment = 1
